# sqs-dispatch

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: c-cpp.yml
